toolchain/internal/core/analysis/testdata/errors/collisions/enum_list_collision.vdl
// @expect: E901
// Type collides with auto-generated ColorList from enum Color

enum Color {
  Red
  Blue
}

type ColorList {
  items: string[]
}
